--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "tailwind-merge": "2.5.4",
-    "tailwindcss-animate": "1.0.7"
+    "tailwind-merge": "2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
