--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "2.5.4"
   },
